--- a/css/styles.css
+++ b/css/styles.css
@@ -545,6 +545,26 @@ button:focus {
   color: var(--third-color);
 }
 
+.footbar-newsletter {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.newsletter-text {
+  margin-bottom: 20px;
+  color: var(--third-color);
+}
+.newsletter-button {
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
 .logo-word {
   color: var(--third-color);
 }
@@ -638,6 +658,39 @@ button:focus {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%);
+}
+.modal-header {
+  margin: 40px 40px 12px 40px;
+}
+.modal-details {
+  display: flex;
+  flex-direction: column;
+  padding: 12px 40px 164px 40px;
+}
+textarea {
+  resize: none;
+}
+.input-container {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+.label-text {
+  position: relative;
+  display: flex;
+  font-size: 14px;
+  color: var(--secondary-color);
+}
+.input-element {
+  width: 100%;
+  height: 40px;
+}
+.modal-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+
+  fill: var(--main-color);
 }
 .close-button {
   position: absolute;
