--- a/css/styles.css
+++ b/css/styles.css
@@ -538,6 +538,7 @@ button:focus {
   flex-wrap: wrap;
   margin-left: 0;
   padding-left: 0;
+  margin-right: 78px;
 }
 
 .social-text {
@@ -547,7 +548,7 @@ button:focus {
 
 .footbar-newsletter {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   margin-left: 0;
   padding-left: 0;
 }
@@ -558,11 +559,17 @@ button:focus {
 }
 .newsletter-button {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 200px;
   height: 50px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+.joinus {
+  margin-right: 24px;
 }
 
 .logo-word {
@@ -669,6 +676,8 @@ button:focus {
 }
 textarea {
   resize: none;
+  width: 100%;
+  height: 120px;
 }
 .input-container {
   position: relative;
@@ -678,15 +687,16 @@ textarea {
 .label-text {
   position: relative;
   display: flex;
-  font-size: 14px;
   color: var(--secondary-color);
 }
 .input-element {
   width: 100%;
   height: 40px;
+  padding-left: 40px;
 }
 .modal-icon {
   position: absolute;
+
   top: 50%;
   left: 15px;
 
