--- a/css/styles.css
+++ b/css/styles.css
@@ -547,29 +547,50 @@ button:focus {
 }
 
 .footbar-newsletter {
+  position: relative;
   display: flex;
-  flex-direction: row;
+
   margin-left: 0;
   padding-left: 0;
+  bottom: 0;
 }
-
+.button-position {
+  position: relative;
+  display: flex;
+  align-items: end;
+  width: 200px;
+  height: 88, 4px;
+}
 .newsletter-text {
   margin-bottom: 20px;
-  color: var(--third-color);
+  color: rgba(255, 255, 255, 1);
 }
 .newsletter-button {
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 200px;
   height: 50px;
+  margin-left: 12px;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 .joinus {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
   margin-right: 24px;
+  color: var(--third-color);
+}
+.input-mail {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2f303a;
 }
 
 .logo-word {
@@ -679,6 +700,7 @@ textarea {
   width: 100%;
   height: 120px;
 }
+
 .input-container {
   position: relative;
   display: inline-block;
@@ -696,10 +718,8 @@ textarea {
 }
 .modal-icon {
   position: absolute;
-
   top: 50%;
   left: 15px;
-
   fill: var(--main-color);
 }
 .close-button {
