--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,7 @@ button:focus {
 .newsletter-text {
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
