--- a/css/styles.css
+++ b/css/styles.css
@@ -601,12 +601,11 @@ button:focus {
 .input-mail {
   width: 358px;
   height: 50px;
-
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  background: #2f303a;
+  background: var(--footbar-background-color);
 }
 
 .logo-word {
@@ -648,6 +647,7 @@ button:focus {
 
 .address a {
   display: block;
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
